resultados/02_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio_lucia-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.org/client-max-body-size: "5024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "5024m"
  labels:
    app: portfolio_lucia
spec:
  tls:
    - hosts:
        - www.luciapaulinapereyra.com
      secretName: lucia_secret
  rules:
    - host: www.luciapaulinapereyra.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio_lucia-srv
                port:
                  number: 8080
